src/objects/Client_Diagnosis__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Client_Diagnosises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Client_Diagnosises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P_C_ID__c</fullName>
        <label>P/C ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Plan</label>
        <referenceTo>Program_Plan__c</referenceTo>
        <relationshipName>Client_Diagnosises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Client Diagnosis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>P_C_ID__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Program_Plan__c</columns>
        <columns>type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Client_Diagnosis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Diagnoses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>